--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CONFIDENTIEL - MISSION virus BOLOSSE-21 - CONFIDENTIEL</title>
+    <title>Agent Ritter</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -30,24 +30,31 @@
         // Fonction pour dessiner la rose fanée avec des points
         function dessinerRoseFanee() {
             const canvas = document.getElementById('rose-fanee');
-            const ctx = canvas.getContext('2d');
+            if (canvas.getContext) {
+                const ctx = canvas.getContext('2d');
 
-            // Liste des positions pour les points représentant la rose fanée
-            const points = [
-                {x: 50, y: 50}, {x: 55, y: 48}, {x: 60, y: 47}, {x: 65, y: 50}, {x: 70, y: 55}, // Pétales du haut
-                {x: 65, y: 60}, {x: 60, y: 65}, {x: 55, y: 63}, {x: 50, y: 60}, {x: 45, y: 55}, // Pétales du bas
-                {x: 50, y: 70}, {x: 53, y: 75}, {x: 57, y: 80}, // Tige
-                {x: 57, y: 85}, {x: 56, y: 90}, {x: 55, y: 95}, {x: 54, y: 100} // Tige courbée (rose fanée)
-            ];
+                // Vérifier la taille du canvas
+                console.log("Taille du canvas:", canvas.width, canvas.height);
 
-            // Dessiner chaque point comme un petit cercle
-            points.forEach(point => {
-                ctx.beginPath();
-                ctx.arc(point.x, point.y, 3, 0, 2 * Math.PI); // Cercle de rayon 3
-                ctx.fillStyle = 'black'; // Couleur des points
-                ctx.fill();
-                ctx.closePath();
-            });
+                // Liste des positions pour les points représentant la rose fanée
+                const points = [
+                    {x: 50, y: 50}, {x: 55, y: 48}, {x: 60, y: 47}, {x: 65, y: 50}, {x: 70, y: 55}, // Pétales du haut
+                    {x: 65, y: 60}, {x: 60, y: 65}, {x: 55, y: 63}, {x: 50, y: 60}, {x: 45, y: 55}, // Pétales du bas
+                    {x: 50, y: 70}, {x: 53, y: 75}, {x: 57, y: 80}, // Tige
+                    {x: 57, y: 85}, {x: 56, y: 90}, {x: 55, y: 95}, {x: 54, y: 100} // Tige courbée (rose fanée)
+                ];
+
+                // Dessiner chaque point comme un petit cercle
+                points.forEach(point => {
+                    ctx.beginPath();
+                    ctx.arc(point.x, point.y, 3, 0, 2 * Math.PI); // Cercle de rayon 3
+                    ctx.fillStyle = 'black'; // Couleur des points
+                    ctx.fill();
+                    ctx.closePath();
+                });
+            } else {
+                console.error("Le canvas n'est pas supporté par ce navigateur.");
+            }
         }
 
         // Appeler la fonction pour dessiner la rose dès que la page se charge
@@ -57,4 +64,3 @@
     </script>
 </body>
 </html>
-
