--- a/index.html
+++ b/index.html
@@ -5,14 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agent Ritter</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: monospace;
+            background-color: black;
+            color: white;
+        }
+        
+        .screen-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .screen {
+            background-color: black;
+            padding: 20px;
+            border: 1px solid white;
+            width: 400px;
+            text-align: center;
+        }
+
+        #text-display {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        .letter-box {
+            background-color: green;
+            color: black;
+            display: inline-block;
+            padding: 5px;
+            margin: 2px;
+            min-width: 20px;
+            text-align: center;
+            opacity: 0;
+        }
+
+        #cursor {
+            font-weight: bold;
+            color: white;
+            animation: blink 1s step-start infinite;
+        }
+
+        @keyframes blink {
+            50% { opacity: 0; }
+        }
+    </style>
 </head>
 <body>
     <div class="screen-container">
         <div class="screen">
-            <div id="text-display">
-                <span id="agent-ritter">Agent Ritter...</span>
-                <span id="cursor">_</span>
-            </div>
+            <div id="text-display"></div>
+            <span id="cursor">_</span>
             <div id="enigme-section" style="display: none;">
                 <p class="enigme-text">Voici votre énigme :</p>
                 <p class="enigme">Je peux voler sans ailes et pleurer sans yeux. Qui suis-je ?</p>
@@ -25,8 +72,39 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
     <script>
+        const text = "CONFIDENTIEL - MISSION virus BOLOSSE-21.";
+        let index = 0;
+
+        function afficherLettre() {
+            const textDisplay = document.getElementById('text-display');
+
+            if (index < text.length) {
+                // Créer une case verte pour chaque lettre
+                const letterBox = document.createElement('span');
+                letterBox.classList.add('letter-box');
+                letterBox.textContent = text[index];
+
+                // Ajouter la lettre avec une transition progressive
+                textDisplay.appendChild(letterBox);
+
+                // Utiliser setTimeout pour créer un effet progressif
+                setTimeout(() => {
+                    letterBox.style.opacity = 1; // rendre la lettre visible progressivement
+                }, 50 * index); // délai en fonction de l'index pour créer l'effet progressif
+
+                index++;
+                setTimeout(afficherLettre, 100); // Vitesse d'apparition des lettres
+            } else {
+                document.getElementById('cursor').style.display = 'none'; // Masquer le curseur quand le texte est fini
+            }
+        }
+
+        window.onload = () => {
+            afficherLettre(); // Lancer l'animation dès le chargement de la page
+            dessinerRoseFanee(); // Appeler la fonction pour dessiner la rose fanée
+        };
+
         // Fonction pour dessiner la rose fanée avec des points
         function dessinerRoseFanee() {
             const canvas = document.getElementById('rose-fanee');
@@ -56,11 +134,6 @@
                 console.error("Le canvas n'est pas supporté par ce navigateur.");
             }
         }
-
-        // Appeler la fonction pour dessiner la rose dès que la page se charge
-        window.onload = function() {
-            dessinerRoseFanee();
-        };
     </script>
 </body>
 </html>
