--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             background-color: black;
             padding: 20px;
             border: 1px solid white;
-            width: 800px;  /* Agrandir la largeur de la page */
+            width: 800px;  /* Taille agrandie */
             text-align: center;
         }
 
@@ -34,20 +34,15 @@
         }
 
         .letter-box {
-            background-color: green;
-            color: black;
+            color: white;
             display: inline-block;
             padding: 5px;
             margin: 2px;
             min-width: 20px;
             text-align: center;
-            font-size: 24px; /* Texte plus petit */
-            transition: background-color 0.5s, opacity 0.5s;
-        }
-
-        .letter-box.show {
-            background-color: black;
-            color: white;
+            font-size: 24px;
+            opacity: 1;
+            transition: opacity 0.25s; /* Transition plus rapide */
         }
 
         #cursor {
@@ -63,6 +58,11 @@
         #enigme-section {
             margin-top: 20px;
         }
+
+        .enigme-text, .enigme {
+            text-align: left;
+            color: white;
+        }
     </style>
 </head>
 <body>
@@ -72,7 +72,13 @@
             <span id="cursor">_</span>
             <div id="enigme-section" style="display: none;">
                 <p class="enigme-text">Voici votre énigme :</p>
-                <p class="enigme">Je peux voler sans ailes et pleurer sans yeux. Qui suis-je ?</p>
+                <p class="enigme" id="enigme-text">
+                    Trois amis, Cococh, Samsam, et Jojo, décident de se partager des haricots magiques. Pour cela, Melmel leur a imposé ces règles :
+                    <br>1. Cococh prend 1/4 de la somme totale.
+                    <br>2. Samsam prend 1/3 de ce qui reste après que Cococh a pris sa part.
+                    <br>3. Jojo prend 1/2 de ce qui reste après que Samsam a pris sa part.
+                    <br>4. Après que tout le monde a pris sa part, il reste exactement 20 haricots magiques.
+                </p>
                 <input type="text" id="reponse" placeholder="Votre réponse ici...">
                 <button id="valider">Valider</button>
                 <p id="resultat"></p>
@@ -91,73 +97,89 @@
             const textDisplay = document.getElementById('text-display');
 
             if (currentLetterBox) {
-                // Rendre la lettre précédente normale (supprimer le carré vert)
                 currentLetterBox.classList.add('show');
             }
 
             if (index < text.length) {
-                // Créer une case verte pour la lettre actuelle
+                // Créer un conteneur pour la lettre actuelle
                 const letterBox = document.createElement('span');
                 letterBox.classList.add('letter-box');
                 letterBox.textContent = text[index];
 
-                // Ajouter la lettre dans l'interface
+                // Ajouter la lettre à l'interface
                 textDisplay.appendChild(letterBox);
 
-                // Enregistrer la lettre actuelle pour la prochaine itération
                 currentLetterBox = letterBox;
 
-                // Afficher la lettre suivante après un certain délai
+                // Afficher la lettre suivante plus rapidement
                 index++;
-                setTimeout(afficherLettre, 500); // Rendre l'affichage plus lent (0.5 seconde entre les lettres)
+                setTimeout(afficherLettre, 250); // Délai réduit pour une vitesse deux fois plus rapide
             } else {
-                // Quand toutes les lettres sont affichées, masquer le curseur
+                // Masquer le curseur une fois que le texte est affiché
                 document.getElementById('cursor').style.display = 'none';
-                afficherEnigme(); // Afficher l'énigme une fois que le texte est fini
+                afficherEnigme();  // Afficher l'énigme une fois le texte terminé
             }
         }
 
-        // Afficher l'énigme après que le texte soit affiché
+        // Afficher l'énigme après le texte
         function afficherEnigme() {
             document.getElementById('enigme-section').style.display = 'block';
         }
 
         window.onload = () => {
-            afficherLettre(); // Lancer l'animation dès le chargement de la page
-            dessinerRoseFanee(); // Appeler la fonction pour dessiner la rose fanée
+            afficherLettre(); // Lancer l'animation au chargement
+            dessinerRoseFanee(); // Dessiner la rose fanée
         };
 
-        // Fonction pour dessiner la rose fanée avec des points
+        // Fonction pour vérifier la réponse et passer à l'énigme suivante
+        document.getElementById('valider').addEventListener('click', function() {
+            const reponse = document.getElementById('reponse').value.trim();
+            const resultat = document.getElementById('resultat');
+
+            if (reponse === '80') {
+                // Bonne réponse, on passe à l'énigme suivante
+                document.getElementById('enigme-text').innerHTML = `
+                    Je vis dans les profondeurs, mais je ne suis pas un poisson.<br>
+                    Mon corps semble flou, comme fait de gélatine.<br>
+                    J'ai un visage souriant qui intrigue les curieux,<br>
+                    Et mon nom semble dire que je suis tristement mystérieux.<br>
+                `;
+                resultat.textContent = ''; // Réinitialiser le texte du résultat
+                document.getElementById('reponse').value = ''; // Réinitialiser le champ de réponse
+            } else {
+                // Mauvaise réponse
+                resultat.textContent = 'Mauvaise réponse, essayez encore.';
+            }
+        });
+
+        // Dessiner la rose fanée avec des points
         function dessinerRoseFanee() {
             const canvas = document.getElementById('rose-fanee');
             if (canvas.getContext) {
                 const ctx = canvas.getContext('2d');
 
-                // Liste des positions pour les points représentant la rose fanée
                 const points = [
                     {x: 50, y: 50}, {x: 55, y: 48}, {x: 60, y: 47}, {x: 65, y: 50}, {x: 70, y: 55}, // Pétales du haut
                     {x: 65, y: 60}, {x: 60, y: 65}, {x: 55, y: 63}, {x: 50, y: 60}, {x: 45, y: 55}, // Pétales du bas
                     {x: 50, y: 70}, {x: 53, y: 75}, {x: 57, y: 80}, // Tige
-                    {x: 57, y: 85}, {x: 56, y: 90}, {x: 55, y: 95}, {x: 54, y: 100} // Tige courbée (rose fanée)
+                    {x: 57, y: 85}, {x: 56, y: 90}, {x: 55, y: 95}, {x: 54, y: 100} // Tige courbée
                 ];
 
-                // Dessiner chaque point comme un petit cercle
                 points.forEach(point => {
                     ctx.beginPath();
-                    ctx.arc(point.x, point.y, 3, 0, 2 * Math.PI); // Cercle de rayon 3
-                    ctx.fillStyle = 'black'; // Couleur des points
+                    ctx.arc(point.x, point.y, 3, 0, 2 * Math.PI);
+                    ctx.fillStyle = 'black';
                     ctx.fill();
                     ctx.closePath();
                 });
             } else {
-                console.error("Le canvas n'est pas supporté par ce navigateur.");
+                console.error("Le canvas n'est pas supporté.");
             }
         }
 
-        // Ajout de l'événement de soumission sur la touche "Entrée"
+        // Événement pour afficher l'énigme quand "Entrée" est pressé
         document.addEventListener('keydown', function(event) {
             if (event.key === 'Enter') {
-                // Afficher l'énigme quand "Entrée" est pressé
                 document.getElementById('enigme-section').style.display = 'block';
             }
         });
