--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </div>
 
             <!-- Section pour les 9 cases -->
-            <div id="cases-section">
+            <div id="cases-section" class="hidden">
                 <input type="text" maxlength="1" class="case">
                 <input type="text" maxlength="1" class="case">
                 <input type="text" maxlength="1" class="case">
